--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "storybook": "^7.6.7",
     "typescript": "^5",
     "vitest": "^1.1.3"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
